Fix wrap on proofs (and other fixes)

--- a/desktop/renderer/style.css
+++ b/desktop/renderer/style.css
@@ -130,6 +130,9 @@ body {
 .hover-underline:hover {
   text-decoration: underline;
 }
+.hover-underline-container:hover .underline{
+  text-decoration: underline;
+}
 
 .hide-scrollbar::-webkit-scrollbar {
 	display: none;
